[gd_scene load_steps=8 format=2]

[ext_resource path="res://main_menu/fonts/RussoOne_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://main_menu/settings/SettingsScreen.gd" type="Script" id=2]
[ext_resource path="res://main_menu/buttons/BackButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://main_menu/fonts/FredokaOne-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/SaveLoad.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 4 )

[node name="SettingsScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_left = 2.24487
margin_right = 2.24487
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_left = 163.0
margin_right = 1756.0
margin_bottom = 923.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
margin_right = 1593.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer"]
margin_right = 1593.0
margin_bottom = 200.0
rect_min_size = Vector2( 550, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="SoundsEffects" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 1593.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/SoundsEffects"]
margin_left = 509.0
margin_top = 48.0
margin_right = 854.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.105882, 0.0392157, 0.866667, 1 )
custom_constants/shadow_offset_y = 5
text = "Sound Effects"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/SoundsEffects"]
margin_left = 858.0
margin_right = 1083.0
margin_bottom = 155.0
custom_constants/margin_top = 50
custom_constants/margin_left = 25

[node name="SoundEffectSlider" type="HSlider" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/SoundsEffects/MarginContainer"]
margin_left = 25.0
margin_top = 50.0
margin_right = 225.0
margin_bottom = 110.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 3
min_value = -30.0
max_value = 0.0

[node name="MainMusic" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer"]
visible = false
margin_top = 114.0
margin_right = 1593.0
margin_bottom = 200.0
rect_min_size = Vector2( 500, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/MainMusic"]
margin_left = 510.0
margin_top = 13.0
margin_right = 784.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.223529, 0.0509804, 0.929412, 1 )
custom_constants/shadow_offset_y = 5
text = "Main Music"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/MainMusic"]
margin_left = 788.0
margin_right = 1083.0
margin_bottom = 86.0
custom_constants/margin_left = 95

[node name="MainMusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/MainMusic/MarginContainer"]
margin_left = 95.0
margin_right = 295.0
margin_bottom = 86.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -30.0
max_value = 0.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 304.0
margin_right = 1593.0
margin_bottom = 413.0
custom_constants/margin_bottom = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer2"]
margin_right = 1593.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "Como jogar:"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 417.0
margin_right = 1593.0
margin_bottom = 854.0
custom_constants/margin_bottom = 200

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer3"]
margin_right = 1593.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 2 )
text = "Objetivo: Você deve buscar as caixas no correio e entregar no local apontado pela seta, 
após a entrega você deve retornar ao correio para buscar uma nova caixa.
Conforme a energia do drone decai, sua velocidade também dimui e para recarregá-lá você 
deve se posicionar em cima do prédio do correio.
Ao trombar com um pássaro sua energia decairá."

[node name="BackButton" parent="MarginContainer/VBoxContainer2" instance=ExtResource( 3 )]
margin_left = 714.0
margin_top = 858.0
margin_right = 878.0
margin_bottom = 923.0

[node name="SaveLoad" type="Node" parent="."]
script = ExtResource( 6 )
[connection signal="value_changed" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/SoundsEffects/MarginContainer/SoundEffectSlider" to="." method="_on_SoundEffectSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer2/MarginContainer/VBoxContainer/MainMusic/MarginContainer/MainMusicSlider" to="." method="_on_MainMusicSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
